--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,17 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE NODE_VERSION=8.9.0
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE NODE_VERSION=14.2.0
   - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.2.0
+  - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE NODE_VERSION=14.2.0
   - DB=pgsql MOODLE_BRANCH=master NODE_VERSION=14.2.0
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE NODE_VERSION=14.2.0
   - DB=mysqli MOODLE_BRANCH=MOODLE_36_STABLE NODE_VERSION=8.9.0
   - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE NODE_VERSION=14.2.0
   - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.2.0
+  - DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE NODE_VERSION=14.2.0
   - DB=mysqli MOODLE_BRANCH=master NODE_VERSION=14.2.0
+
+jobs:
+  fast_finish: true
 
 before_install:
   - phpenv config-rm xdebug.ini
