--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -195,6 +195,10 @@ jobs:
         if: ${{ always() }}
         run: moodle-plugin-ci codechecker
 
+      - name: Run Moodle PHPDoc Checker on the plugin
+        if: ${{ always() }}
+        run: moodle-plugin-ci phpdoc
+
       - name: Validate the plugin
         if: ${{ always() }}
         run: moodle-plugin-ci validate
