--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,14 @@
 name: Moodle Plugin CI
-on: push
+on: [push, pull_request]
 defaults:
   run:
     shell: bash -l {0}
 jobs:
   moodle-plugin-ci:
-    env:
-      IGNORE_PATHS : lrs/vendor
-
     strategy:
       fail-fast: true
       matrix:
         moodle-versions: [
-          'MOODLE_32_STABLE',
-          'MOODLE_33_STABLE',
-          'MOODLE_34_STABLE',
           'MOODLE_35_STABLE',
           'MOODLE_36_STABLE',
           'MOODLE_37_STABLE',
@@ -27,50 +21,23 @@ jobs:
           'pgsql',
           'mariadb'
         ]
-        operating-system: [ubuntu-latest]
-        php-versions: ['7.2']
-        node-versions: ['14.15.0']
+        operating-system: [
+          ubuntu-latest
+        ]
+        php-versions: [
+          '7.2'
+        ]
+        node-versions: [
+          '14.15.0'
+        ]
 
         exclude:
-          - moodle-versions: 'MOODLE_32_STABLE'
-            node-versions: '14.15.0'
-          - moodle-versions: 'MOODLE_33_STABLE'
-            node-versions: '14.15.0'
-          - moodle-versions: 'MOODLE_34_STABLE'
-            node-versions: '14.15.0'
           - moodle-versions: 'MOODLE_36_STABLE'
             node-versions: '14.15.0'
+          - moodle-versions: 'MOODLE_311_STABLE'
+            php-versions: '7.2'
+
         include:
-          - moodle-versions: 'MOODLE_32_STABLE'
-            database: 'pgsql'
-            operating-system: 'ubuntu-latest'
-            php-versions: '7.0'
-            node-versions: '8.9'
-          - moodle-versions: 'MOODLE_32_STABLE'
-            database: 'mariadb'
-            operating-system: 'ubuntu-latest'
-            php-versions: '7.0'
-            node-versions: '8.9'
-          - moodle-versions: 'MOODLE_33_STABLE'
-            database: 'pgsql'
-            operating-system: 'ubuntu-latest'
-            php-versions: '7.0'
-            node-versions: '8.9'
-          - moodle-versions: 'MOODLE_33_STABLE'
-            database: 'mariadb'
-            operating-system: 'ubuntu-latest'
-            php-versions: '7.0'
-            node-versions: '8.9'
-          - moodle-versions: 'MOODLE_34_STABLE'
-            database: 'pgsql'
-            operating-system: 'ubuntu-latest'
-            php-versions: '7.2'
-            node-versions: '8.9'
-          - moodle-versions: 'MOODLE_34_STABLE'
-            database: 'mariadb'
-            operating-system: 'ubuntu-latest'
-            php-versions: '7.2'
-            node-versions: '8.9'
           - moodle-versions: 'MOODLE_36_STABLE'
             database: 'pgsql'
             operating-system: 'ubuntu-latest'
@@ -81,6 +48,16 @@ jobs:
             operating-system: 'ubuntu-latest'
             php-versions: '7.2'
             node-versions: '8.9'
+          - moodle-versions: 'MOODLE_311_STABLE'
+            database: 'pgsql'
+            operating-system: 'ubuntu-latest'
+            php-versions: '7.3'
+            node-versions: '14.15.0'
+          - moodle-versions: 'MOODLE_311_STABLE'
+            database: 'mariadb'
+            operating-system: 'ubuntu-latest'
+            php-versions: '7.3'
+            node-versions: '14.15.0'
 
     runs-on: ${{ matrix.operating-system }}
 
